<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculater</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn15_label">15%</string>
    <string name="btn10_label">10%</string>
    <string name="btn20_label">20%</string>
    <string name="TotalAmt_label">Total Amount</string>
    <string name="tv_Tip">Tip is:</string>
    <string name="Empty_string"></string>

</resources>
