<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalcActivity" >

    <Button
        android:id="@+id/btnTip15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="show15PercentTip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/btn15_label" />

    <Button
        android:id="@+id/btnTip10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="show10PercentTip"
        android:layout_alignBaseline="@+id/btnTip15"
        android:layout_alignBottom="@+id/btnTip15"
        android:layout_toLeftOf="@+id/btnTip15"
        android:text="@string/btn10_label" />

    <Button
        android:id="@+id/btnTip20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="show20PercentTip"
        android:layout_alignBaseline="@+id/btnTip15"
        android:layout_alignBottom="@+id/btnTip15"
        android:layout_toRightOf="@+id/btnTip15"
        android:text="@string/btn20_label" />

    <TextView
        android:id="@+id/tvTipis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTip10"
        android:layout_below="@+id/btnTip15"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="46dp"
        android:text="@string/tv_Tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTipis"
        android:layout_toRightOf="@+id/tvTipis"
        android:text="@string/Empty_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etTotalAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnTip15"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:ems="10"
        android:hint="@string/TotalAmt_label"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

</RelativeLayout>
